Bypass Mockito test phase due to Java 25 EA reflection constraints